# pieces-of-code

./: .gitignore  LICENSE
cpp_async/: CMakeLists.txt  main.cpp
cpp_basic/: CMakeLists.txt  catd.cpp  container_of.cpp  ctad.cpp  fmt.hpp  func.cpp  main.cpp  mp.cpp  mp.hpp  riter.cpp  sfinae.cpp
cpp_mp/: CMakeLists.txt  fmt.hpp  main.cpp  mp.hpp
cpp_type_list/: CMakeLists.txt  main.cpp  type_list.hpp
golang_chan/: go.mod  main.go
golang_grpc/: client.go  go.mod  main.go  services.proto
golang_grpc/services/: services.pb.go
golang_hello_web/: context.go  go.mod  main.go  middleware.go  router.go  server.go
python/: in  main.py
rust_basic/: Cargo.toml
rust_basic/src/: main.rs  mybox.rs  pin_test.rs
rust_futures/: Cargo.toml
rust_futures/src/: main.rs
